--- a/Página Web RushBurger/index.html
+++ b/Página Web RushBurger/index.html
@@ -415,7 +415,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="https://scontent-bog2-2.xx.fbcdn.net/v/t39.30808-6/348971844_1203550933639342_9121287294231438898_n.png?_nc_cat=111&ccb=1-7&_nc_sid=0b6b33&_nc_eui2=AeGTlE4nYQtWB8Wd2YokASui8KrzGMqoH23wqvMYyqgfbQ0kwuTBON22ZfqzvozhW-q3EC_ZhJ1cvElBKAUoEoec&_nc_ohc=F4YWHmpoCW8Q7kNvwGBWVJg&_nc_oc=AdnbGrlQ_5J7JN2lY2TAboVfRBz1fdvyTEIBcNtuOOjHG6E3IcZNN0WtWZq3pVC3LQM&_nc_zt=23&_nc_ht=scontent-bog2-2.xx&_nc_gid=LaGlSC2kkWw2syWpADqWpg&oh=00_Aff4uZKpg2Do2d04e-BkLe9P3Ez4v4Uo0OsCYMgr6XhO2A&oe=68EFC3E9"
+                    <img src="Images\quatro_litro_y_medio.png"
                         alt="Cuatro Litro y Medio">
                     <div class="product-info">
                         <h3>Cuatro Litro y Medio</h3>
@@ -469,3 +469,4 @@
 </body>
 
 </html>
+
