--- a/Página Web RushBurger/index.html
+++ b/Página Web RushBurger/index.html
@@ -93,12 +93,12 @@
                         alt="Perro Sencillo">
                     <div class="product-info">
                         <h3>Perro Sencillo</h3>
-                        <p>Salchicha americana en pan suave con nuestras salsas clásicas.</p>
+                        <p>Salchicha en pan suave con nuestras salsas clásicas.</p>
                         <span class="price">$6.000</span>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/400x300.png/9b131e/FFFFFF?text=Doble+Salchicha"
+                    <img src="images\Perro_doble_salchicha.jpg"
                         alt="Perro Doble Salchicha">
                     <div class="product-info">
                         <h3>Perro Doble Salchicha</h3>
@@ -470,6 +470,7 @@
 </body>
 
 </html>
+
 
 
 
