--- a/Página Web RushBurger/index.html
+++ b/Página Web RushBurger/index.html
@@ -98,7 +98,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="images\perro_doble_salchicha.jpg"
+                    <img src="Images\perro_doble_salchicha.jpg"
                         alt="Perro Doble Salchicha">
                     <div class="product-info">
                         <h3>Perro Doble Salchicha</h3>
@@ -470,6 +470,7 @@
 </body>
 
 </html>
+
 
 
 
