--- a/Página Web RushBurger/index.html
+++ b/Página Web RushBurger/index.html
@@ -74,7 +74,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/400x300.png/edb813/000000?text=Burger+Pollo"
+                    <img src="Images\burger_pollo.jpg"
                         alt="Burger de Pollo">
                     <div class="product-info">
                         <h3>Burger de Pollo</h3>
@@ -93,12 +93,12 @@
                         alt="Perro Sencillo">
                     <div class="product-info">
                         <h3>Perro Sencillo</h3>
-                        <p>Salchicha en pan suave con nuestras salsas clásicas.</p>
+                        <p>Salchicha americana en pan suave con nuestras salsas clásicas.</p>
                         <span class="price">$6.000</span>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="Images\perro_doble_salchicha.jpg"
+                    <img src="https://via.placeholder.com/400x300.png/9b131e/FFFFFF?text=Doble+Salchicha"
                         alt="Perro Doble Salchicha">
                     <div class="product-info">
                         <h3>Perro Doble Salchicha</h3>
@@ -156,12 +156,12 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/400x300.png/6b6969/FFFFFF?text=Salchipollo+Criolla"
+                    <img src="Images\salchipollo_papa_amarilla.jpg"
                         alt="Salchipollo criolla">
                     <div class="product-info">
                         <h3>Salchipollo Papa Criolla</h3>
                         <p>La combinación perfecta con papa criolla, pollo y salchicha.</p>
-                        <span class="price">$23.000</span>
+                        <span class="price">$22.000</span>
                     </div>
                 </div>
                 <div class="product-card">
@@ -196,7 +196,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/400x300.png/edb813/000000?text=Patacon+Ranchero"
+                    <img src="Images\patacon_ranchero.jpg"
                         alt="Patacón Ranchero">
                     <div class="product-info">
                         <h3>Patacón Ranchero</h3>
@@ -232,7 +232,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/400x300.png/edb813/000000?text=Patacon+Coloso"
+                    <img src="Images\patacon_coloso.jpg"
                         alt="Patacón Coloso">
                     <div class="product-info">
                         <h3>Patacón Coloso</h3>
@@ -363,7 +363,7 @@
                     <div class="product-info">
                         <h3>Cerveza Poker 269 ml</h3>
                         <p>El amigo que une a los amigos.</p>
-                        <span class="price">$5.000</span>
+                        <span class="price">$4.000</span>
                     </div>
                 </div>
                 <div class="product-card">
@@ -372,7 +372,7 @@
                     <div class="product-info">
                         <h3>Cerveza Águila 269 ml</h3>
                         <p>La cerveza que celebra lo que somos.</p>
-                        <span class="price">$5.000</span>
+                        <span class="price">$4.000</span>
                     </div>
                 </div>
             </div>
@@ -470,9 +470,3 @@
 </body>
 
 </html>
-
-
-
-
-
-
