--- a/Página Web RushBurger/index.html
+++ b/Página Web RushBurger/index.html
@@ -274,7 +274,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="Images/Canastas_platano-copia.jpg" alt="Canastas de Plátano">
+                    <img src="Images/Canastas_platano.jpg" alt="Canastas de Plátano">
                     <div class="product-info">
                         <h3>Canastas de Plátano</h3>
                         <p>Carne desmechada, queso, pico gallo y salsa tártara sobre canastas de patacón.</p>
@@ -470,3 +470,4 @@
 </body>
 
 </html>
+
