--- a/Página Web RushBurger/index.html
+++ b/Página Web RushBurger/index.html
@@ -98,7 +98,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/400x300.png/9b131e/FFFFFF?text=Doble+Salchicha"
+                    <img src="Images/perro_doble_salchicha.jpg"
                         alt="Perro Doble Salchicha">
                     <div class="product-info">
                         <h3>Perro Doble Salchicha</h3>
@@ -470,4 +470,5 @@
 </body>
 
 </html>
+
 
