--- a/Página Web RushBurger/index.html
+++ b/Página Web RushBurger/index.html
@@ -57,7 +57,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/400x300.png/edb813/000000?text=Burger+Mixta"
+                    <img src="Images\burger_mixta.jpg"
                         alt="Burger Mixta">
                     <div class="product-info">
                         <h3>Burger Mixta</h3>
@@ -223,7 +223,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/400x300.png/edb813/000000?text=Patacon+Pataki"
+                    <img src="Images\patacon_pataki.jpg"
                         alt="Patacón Pataki">
                     <div class="product-info">
                         <h3>Patacón Pataki</h3>
@@ -242,7 +242,7 @@
                 </div>
 
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/400x300.png/edb813/000000?text=Patacón+Burger"
+                    <img src="Images\patacon_burger.jpg"
                         alt="Patacón Burger">
                     <div class="product-info">
                         <h3>Patacón Burger</h3>
@@ -470,6 +470,7 @@
 </body>
 
 </html>
+
 
 
 
