--- a/Página Web RushBurger/index.html
+++ b/Página Web RushBurger/index.html
@@ -89,11 +89,11 @@
             <h2 class="category-title">Perros Calientes</h2>
             <div class="product-grid">
                 <div class="product-card">
-                    <img src="https://i.pinimg.com/736x/21/f5/a9/21f5a9352ab701d58773a8e629a4d8f0.jpg"
+                    <img src="Images\perro_sencillo.jpg"
                         alt="Perro Sencillo">
                     <div class="product-info">
                         <h3>Perro Sencillo</h3>
-                        <p>Salchicha americana en pan suave con nuestras salsas clásicas.</p>
+                        <p>Salchicha en pan suave con nuestras salsas clásicas.</p>
                         <span class="price">$6.000</span>
                     </div>
                 </div>
@@ -111,7 +111,7 @@
                         alt="Perro con Carne">
                     <div class="product-info">
                         <h3>Perro con Carne</h3>
-                        <p>Deliciosa carne desmechada sobre nuestra salchicha especial.</p>
+                        <p>Deliciosa carne desmechada sobre nuestra salchicha.</p>
                         <span class="price">$10.000</span>
                     </div>
                 </div>
@@ -470,6 +470,7 @@
 </body>
 
 </html>
+
 
 
 
