--- a/Página Web RushBurger/index.html
+++ b/Página Web RushBurger/index.html
@@ -69,7 +69,7 @@
                     <img src="Images\burger_doble_carne.jpg" alt="Burger Doble Carne">
                     <div class="product-info">
                         <h3>Burger Doble Carne</h3>
-                        <p>Para los que no se conforman. Doble porción de nuestra carne premium.</p>
+                        <p>Para los que no se conforman. Doble porción de nuestra carne.</p>
                         <span class="price">$20.000</span>
                     </div>
                 </div>
@@ -151,7 +151,7 @@
                         alt="Salchipollo a la francesa">
                     <div class="product-info">
                         <h3>Salchipollo a la Francesa</h3>
-                        <p>Papas a la francesa con trozos de pollo y salchicha.</p>
+                        <p>Papas a la francesa con pollo desmechado y salchicha.</p>
                         <span class="price">$21.000</span>
                     </div>
                 </div>
@@ -168,7 +168,7 @@
                     <img src="https://via.placeholder.com/400x300.png/6b6969/FFFFFF?text=Choripapa" alt="Choripapa">
                     <div class="product-info">
                         <h3>Choripapa</h3>
-                        <p>Papas crujientes acompañadas de chorizo premium.</p>
+                        <p>Papas crujientes acompañadas de chorizo criollo.</p>
                         <span class="price">$23.000</span>
                     </div>
                 </div>
@@ -227,7 +227,7 @@
                         alt="Patacón Pataki">
                     <div class="product-info">
                         <h3>Patacón Pataki</h3>
-                        <p>Pollo, queso fundido, maíz, chorizo, salsa tártara.</p>
+                        <p>Pollo, queso fundido, maíz, chorizo satarrosano, salsa tártara.</p>
                         <span class="price">$25.000</span>
                     </div>
                 </div>
@@ -246,7 +246,7 @@
                         alt="Patacón Burger">
                     <div class="product-info">
                         <h3>Patacón Burger</h3>
-                        <p>Hamburguesa con panes reemplazados por patacones y carne desmechada en lugar de croqueta.</p>
+                        <p>Para los que desean una hamburguesa, pero al estilo patacón, no lleva croqueta de carne, si no carne desmechada.</p>
                         <span class="price">$16.000</span>
                     </div>
                 </div>
@@ -260,7 +260,7 @@
                     <img src="Images\alitas.jpg" alt="Alitas BBQ">
                     <div class="product-info">
                         <h3>Alitas a la BBQ</h3>
-                        <p>Jugosas alitas bañadas en nuestra salsa BBQ secreta.</p>
+                        <p>Jugosas alitas bañadas en nuestra salsa BBQ.</p>
                         <span class="price">$14.000</span>
                     </div>
                 </div>
@@ -269,7 +269,7 @@
                         alt="Costillas BBQ">
                     <div class="product-info">
                         <h3>Costillas a la BBQ</h3>
-                        <p>Tiernas costillas de cerdo ahumadas y bañadas en salsa BBQ.</p>
+                        <p>Tiernas costillas de cerdo y bañadas en salsa BBQ.</p>
                         <span class="price">$15.000</span>
                     </div>
                 </div>
@@ -470,6 +470,7 @@
 </body>
 
 </html>
+
 
 
 
