--- a/Página Web RushBurger/index.html
+++ b/Página Web RushBurger/index.html
@@ -134,7 +134,7 @@
                     <img src="Images/salchipapa_francesa.jpg" alt="Salchipapa a la francesa">
                     <div class="product-info">
                         <h3>Salchipapa a la Francesa</h3>
-                        <p>Papas a la francesa crujientes con salchicha y salsas de la casa.</p>
+                        <p>Papas a la francesa crujientes con salchicha y salsas clásicas.</p>
                         <span class="price">$15.000</span>
                     </div>
                 </div>
@@ -142,7 +142,7 @@
                     <img src="Images\Salchipapa_amarilla.jpg" alt="Salchipapa criolla">
                     <div class="product-info">
                         <h3>Salchipapa Papa Criolla</h3>
-                        <p>El sabor de nuestra tierra con papa criolla amarilla y salchicha.</p>
+                        <p>El sabor de nuestra tierra con papa criolla amarilla, salchicha, queso y vegetales.</p>
                         <span class="price">$17.000</span>
                     </div>
                 </div>
@@ -151,7 +151,7 @@
                         alt="Salchipollo a la francesa">
                     <div class="product-info">
                         <h3>Salchipollo a la Francesa</h3>
-                        <p>Papas a la francesa con pollo desmechado y salchicha.</p>
+                        <p>Papas a la francesa con pollo desmechado, salchicha, queso y vegetales.</p>
                         <span class="price">$21.000</span>
                     </div>
                 </div>
@@ -160,7 +160,7 @@
                         alt="Salchipollo criolla">
                     <div class="product-info">
                         <h3>Salchipollo Papa Criolla</h3>
-                        <p>La combinación perfecta con papa criolla, pollo y salchicha.</p>
+                        <p>La combinación perfecta con papa criolla, pollo, salchicha, queso y vegetales.</p>
                         <span class="price">$23.000</span>
                     </div>
                 </div>
@@ -168,7 +168,7 @@
                     <img src="https://via.placeholder.com/400x300.png/6b6969/FFFFFF?text=Choripapa" alt="Choripapa">
                     <div class="product-info">
                         <h3>Choripapa</h3>
-                        <p>Papas crujientes acompañadas de chorizo criollo.</p>
+                        <p>Papas crujientes acompañadas de chorizo criollo y queso.</p>
                         <span class="price">$23.000</span>
                     </div>
                 </div>
@@ -470,6 +470,7 @@
 </body>
 
 </html>
+
 
 
 
