--- a/Página Web RushBurger/index.html
+++ b/Página Web RushBurger/index.html
@@ -380,7 +380,7 @@
             <h3 class="beverage-group-subtitle">Grupales</h3>
             <div class="product-grid">
                 <div class="product-card">
-                    <img src="Images\coca_litro_y_medio.jpg"
+                    <img src="Images\coca_litro_y_medio.webp"
                         alt="Coca Cola Litro y Medio">
                     <div class="product-info">
                         <h3>Coca Cola Litro y Medio</h3>
@@ -470,6 +470,7 @@
 </body>
 
 </html>
+
 
 
 
