--- a/Página Web RushBurger/index.html
+++ b/Página Web RushBurger/index.html
@@ -367,7 +367,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="https://megatiendas.vtexassets.com/arquivos/ids/175749-800-450?v=638799922615200000&width=800&height=450&aspect=true"
+                    <img src="Images\aguil.jpg"
                         alt="Cerveza Águila">
                     <div class="product-info">
                         <h3>Cerveza Águila 269 ml</h3>
@@ -470,6 +470,7 @@
 </body>
 
 </html>
+
 
 
 
