--- a/Página Web RushBurger/index.html
+++ b/Página Web RushBurger/index.html
@@ -367,7 +367,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="Images\aguil.jpg"
+                    <img src="Images\aguila.jpg"
                         alt="Cerveza Águila">
                     <div class="product-info">
                         <h3>Cerveza Águila 269 ml</h3>
@@ -470,6 +470,7 @@
 </body>
 
 </html>
+
 
 
 
