--- a/Página Web RushBurger/index.html
+++ b/Página Web RushBurger/index.html
@@ -398,7 +398,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="https://autoserviciolosportales.caxtor.co/rails/active_storage/blobs/proxy/eyJfcmFpbHMiOnsiZGF0YSI6OTczNDgwLCJwdXIiOiJibG9iX2lkIn19--29b5f467d7ac66c9f1e1c036636f95648b5ad168/1639.png?locale=es"
+                    <img src="jugo_hit_litro_y_medio.jpg"
                         alt="Jugo Hit Litro y Medio">
                     <div class="product-info">
                         <h3>Jugo Hit Litro y Medio</h3>
@@ -470,6 +470,7 @@
 </body>
 
 </html>
+
 
 
 
