--- a/Página Web RushBurger/index.html
+++ b/Página Web RushBurger/index.html
@@ -113,6 +113,10 @@
                         <h3>Perro con Carne</h3>
                         <p>Deliciosa carne desmechada sobre nuestra salchicha.</p>
                         <span class="price">$10.000</span>
+Use Control + Shift + m to toggle the tab key moving focus. Alternatively, use esc then tab to move to the next interactive element on the page.
+Editing RushBurger-Menu/Página Web RushBurger/index.html at main · JesusDavidGaona0705/RushBurger-Menu
+Explicar
+
                     </div>
                 </div>
                 <div class="product-card">
@@ -398,7 +402,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="jugo_hit_litro_y_medio.jpg"
+                    <img src="Images\jugo_hit_litro_y_medio.jpg"
                         alt="Jugo Hit Litro y Medio">
                     <div class="product-info">
                         <h3>Jugo Hit Litro y Medio</h3>
@@ -470,6 +474,7 @@
 </body>
 
 </html>
+
 
 
 
