--- a/Página Web RushBurger/index.html
+++ b/Página Web RushBurger/index.html
@@ -112,11 +112,8 @@
                     <div class="product-info">
                         <h3>Perro con Carne</h3>
                         <p>Deliciosa carne desmechada sobre nuestra salchicha.</p>
-                        <span class="price">$10.000</span>
-Use Control + Shift + m to toggle the tab key moving focus. Alternatively, use esc then tab to move to the next interactive element on the page.
-Editing RushBurger-Menu/Página Web RushBurger/index.html at main · JesusDavidGaona0705/RushBurger-Menu
-Explicar
-
+                        <span class="price">$10.000</span
+                                                       
                     </div>
                 </div>
                 <div class="product-card">
@@ -474,6 +471,7 @@ Explicar
 </body>
 
 </html>
+
 
 
 
