--- a/Página Web RushBurger/index.html
+++ b/Página Web RushBurger/index.html
@@ -111,9 +111,9 @@
                         alt="Perro con Carne">
                     <div class="product-info">
                         <h3>Perro con Carne</h3>
-                        <p>Deliciosa carne desmechada sobre nuestra salchicha.</p>
-                        <span class="price">$10.000</span
-                                                       
+                        <p>Deliciosa carne desmechada sobre nuestra salchicha especial.</p>
+                        <span class="price">$10.000</span>
+                    </div>
                     </div>
                 </div>
                 <div class="product-card">
