--- a/Página Web RushBurger/index.html
+++ b/Página Web RushBurger/index.html
@@ -290,7 +290,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/400x300.png/9b131e/FFFFFF?text=Picada+2+Personas"
+                    <img src="picada_de_40.jpg"
                         alt="Picada para dos">
                     <div class="product-info">
                         <h3>Picada (2 personas)</h3>
@@ -470,6 +470,7 @@
 </body>
 
 </html>
+
 
 
 
