--- a/Página Web RushBurger/index.html
+++ b/Página Web RushBurger/index.html
@@ -107,7 +107,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/400x300.png/9b131e/FFFFFF?text=Perro+con+Carne"
+                    <img src="Images\perro_carne.jpg"
                         alt="Perro con Carne">
                     <div class="product-info">
                         <h3>Perro con Carne</h3>
@@ -147,7 +147,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/400x300.png/6b6969/FFFFFF?text=Salchipollo+Francesa"
+                    <img src="Images\salchipollo_papa_francesa.jpg"
                         alt="Salchipollo a la francesa">
                     <div class="product-info">
                         <h3>Salchipollo a la Francesa</h3>
@@ -470,6 +470,7 @@
 </body>
 
 </html>
+
 
 
 
