--- a/Página Web RushBurger/index.html
+++ b/Página Web RushBurger/index.html
@@ -52,7 +52,7 @@
                     <img src="Images\burger_sencilla.jpg" alt="Burger Sencilla">
                     <div class="product-info">
                         <h3>Burger Sencilla</h3>
-                        <p>La clásica de la casa con ingredientes frescos y nuestra salsa especial.</p>
+                        <p>La clásica de la casa con ingredientes frescos y nuestras salsas clásicas.</p>
                         <span class="price">$15.000</span>
                     </div>
                 </div>
@@ -257,10 +257,10 @@
             <h2 class="category-title">Picadas y demás</h2>
             <div class="product-grid">
                 <div class="product-card">
-                    <img src="Images\alitas.jpg" alt="Alitas BBQ">
+                    <img src="https://i.pinimg.com/1200x/4c/e1/40/4ce140499895f26ce9fb6bfb36b2ce4c.jpg">
                     <div class="product-info">
                         <h3>Alitas a la BBQ</h3>
-                        <p>Jugosas alitas bañadas en nuestra salsa BBQ.</p>
+                        <p>Jugosas alitas bañadas en nuestra salsa BBQ, con papas fritas.</p>
                         <span class="price">$14.000</span>
                     </div>
                 </div>
@@ -269,7 +269,7 @@
                         alt="Costillas BBQ">
                     <div class="product-info">
                         <h3>Costillas a la BBQ</h3>
-                        <p>Tiernas costillas de cerdo y bañadas en salsa BBQ.</p>
+                        <p>Tiernas costillas de cerdo y bañadas en salsa BBQ, con papa frita.</p>
                         <span class="price">$15.000</span>
                     </div>
                 </div>
@@ -282,7 +282,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="https://i.pinimg.com/736x/fc/15/a6/fc15a66c385df8bd57d3dc0bc58b5990.jpg" alt="Maicito">
+                    <img src="https://i.pinimg.com/736x/d2/01/8e/d2018e076e7f6822857afe68da105251.jpg" alt="Maicito">
                     <div class="product-info">
                         <h3>Maicito</h3>
                         <p>Maíz, queso fundido, pollo desmechado, tocineta, chorizo, salsa tártara.</p>
@@ -294,7 +294,7 @@
                         alt="Picada para dos">
                     <div class="product-info">
                         <h3>Picada (2 personas)</h3>
-                        <p>Una selección de nuestras mejores carnes y acompañantes para compartir.</p>
+                        <p>Una selección de nuestras mejores carnes de cerdo, respechuga y acompañantes como salchicha, chorizo para compartir.</p>
                         <span class="price">$40.000</span>
                     </div>
                 </div>
@@ -470,6 +470,7 @@
 </body>
 
 </html>
+
 
 
 
