--- a/Página Web RushBurger/index.html
+++ b/Página Web RushBurger/index.html
@@ -168,7 +168,7 @@
                     <img src="https://via.placeholder.com/400x300.png/6b6969/FFFFFF?text=Choripapa" alt="Choripapa">
                     <div class="product-info">
                         <h3>Choripapa</h3>
-                        <p>Papas crujientes acompañadas de chorizo criollo y queso.</p>
+                        <p>Papas crujientes acompañadas de chorizo criollo ahumado y queso.</p>
                         <span class="price">$23.000</span>
                     </div>
                 </div>
@@ -176,7 +176,7 @@
                     <img src="https://via.placeholder.com/400x300.png/6b6969/FFFFFF?text=Choripollo" alt="Choripollo">
                     <div class="product-info">
                         <h3>Choripollo</h3>
-                        <p>Deliciosa combinación de papas, pollo desmechado y auténticos chorizos criollos.</p>
+                        <p>Deliciosa combinación de papas, pollo desmechado y auténticos chorizos criollos ahumados.</p>
                         <span class="price">$30.000</span>
                     </div>
                 </div>
@@ -470,6 +470,7 @@
 </body>
 
 </html>
+
 
 
 
