--- a/Página Web RushBurger/index.html
+++ b/Página Web RushBurger/index.html
@@ -430,6 +430,7 @@
 
     <footer class="footer">
         <p>ORDENE AHORA! <strong>321 2915763</strong></p>
+        <p><strong>Costo de domicilio: $1.000 COP</strong></p>
         <p>&copy; 2025 RushBurger. Todos los derechos reservados.</p>
     </footer>
 
@@ -470,6 +471,7 @@
 </body>
 
 </html>
+
 
 
 
