--- a/Página Web RushBurger/index.html
+++ b/Página Web RushBurger/index.html
@@ -116,7 +116,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/400x300.png/9b131e/FFFFFF?text=Perro+con+Pollo"
+                    <img src="Images\perro_pollo.jpg"
                         alt="Perro con Pollo">
                     <div class="product-info">
                         <h3>Perro con Pollo</h3>
@@ -187,7 +187,7 @@
             <h2 class="category-title">Patacones</h2>
             <div class="product-grid">
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/400x300.png/edb813/000000?text=Patacon+Campesino"
+                    <img src="Images\patacon_campesino.jpg"
                         alt="Patacón Campesino">
                     <div class="product-info">
                         <h3>Patacón Campesino</h3>
@@ -257,7 +257,7 @@
             <h2 class="category-title">Picadas y demás</h2>
             <div class="product-grid">
                 <div class="product-card">
-                    <img src="https://i.pinimg.com/1200x/4c/e1/40/4ce140499895f26ce9fb6bfb36b2ce4c.jpg">
+                    <img src="Images\alitas.jpg">
                     <div class="product-info">
                         <h3>Alitas a la BBQ</h3>
                         <p>Jugosas alitas bañadas en nuestra salsa BBQ, con papas fritas.</p>
@@ -471,6 +471,7 @@
 </body>
 
 </html>
+
 
 
 
