--- a/Página Web RushBurger/index.html
+++ b/Página Web RushBurger/index.html
@@ -299,7 +299,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/400x300.png/9b131e/FFFFFF?text=Picada+3+Personas"
+                    <img src="Images\Picada_de_50.jpeg"
                         alt="Picada para tres">
                     <div class="product-info">
                         <h3>Picada (3 personas)</h3>
@@ -471,6 +471,7 @@
 </body>
 
 </html>
+
 
 
 
