--- a/Página Web RushBurger/index.html
+++ b/Página Web RushBurger/index.html
@@ -165,7 +165,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/400x300.png/6b6969/FFFFFF?text=Choripapa" alt="Choripapa">
+                    <img src="Images/choripapa.jpeg">
                     <div class="product-info">
                         <h3>Choripapa</h3>
                         <p>Papas crujientes acompañadas de chorizo criollo ahumado y queso.</p>
@@ -282,7 +282,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="https://i.pinimg.com/736x/d2/01/8e/d2018e076e7f6822857afe68da105251.jpg" alt="Maicito">
+                    <img src="Images/maicito.jpeg">
                     <div class="product-info">
                         <h3>Maicito</h3>
                         <p>Maíz, queso fundido, pollo desmechado, tocineta, chorizo, salsa tártara.</p>
@@ -471,6 +471,7 @@
 </body>
 
 </html>
+
 
 
 
