--- a/Página Web RushBurger/index.html
+++ b/Página Web RushBurger/index.html
@@ -336,7 +336,7 @@
                     <img src="https://www.coca-cola.com/content/dam/onexp/co/es/brands/quatro/card_botella.jpg"
                         alt="Cuatro 400 ml">
                     <div class="product-info">
-                        <h3>Cuatro 400 ml</h3>
+                        <h3>Quatro 400 ml</h3>
                         <p>El sabor original de la toronja, pero más refrescante.</p>
                         <span class="price">$3.500</span>
                     </div>
@@ -419,7 +419,7 @@
                     <img src="Images\quatro_litro_y_medio.png"
                         alt="Cuatro Litro y Medio">
                     <div class="product-info">
-                        <h3>Cuatro Litro y Medio</h3>
+                        <h3>Quatro Litro y Medio</h3>
                         <p>El clásico que nunca pasa de moda.</p>
                         <span class="price">$7.000</span>
                     </div>
@@ -471,6 +471,7 @@
 </body>
 
 </html>
+
 
 
 
