--- a/Página Web RushBurger/index.html
+++ b/Página Web RushBurger/index.html
@@ -210,16 +210,16 @@
                     <div class="product-info">
                         <h3>Patacón Mixto</h3>
                         <p>Pollo, carne, chorizo, queso fundido, salsa tártara.</p>
-                        <span class="price">$25.000</span>
+                        <span class="price">$30.000</span>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/400x300.png/edb813/000000?text=Patacon+Tropikrunch"
+                    <img src="Images\Patacon_Tropikunch.jpeg"
                         alt="Patacón Tropikrunch">
                     <div class="product-info">
                         <h3>Patacón Tropikrunch</h3>
                         <p>Pollo, salchicha ranchera premium, maíz, queso fundido, salsa tártara.</p>
-                        <span class="price">$25.000</span>
+                        <span class="price">$27.000</span>
                     </div>
                 </div>
                 <div class="product-card">
@@ -471,6 +471,7 @@
 </body>
 
 </html>
+
 
 
 
