--- a/Página Web RushBurger/index.html
+++ b/Página Web RushBurger/index.html
@@ -325,7 +325,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="https://i.pinimg.com/736x/d1/4d/b5/d14db5d3c2bfa663fbf207c051bccc0b.jpg" alt="Postobon">
+                    <img src="Images\postobon_personal.jpg>
                     <div class="product-info">
                         <h3>Postobon 500 ml</h3>
                         <p>Elige tu sabor favorito.</p>
@@ -471,3 +471,4 @@
 </body>
 
 </html>
+
