--- a/Página Web RushBurger/index.html
+++ b/Página Web RushBurger/index.html
@@ -325,7 +325,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="Images\postobon_personal.jpg>
+                    <img src="Images\postobon_personal.jpg">
                     <div class="product-info">
                         <h3>Postobon 500 ml</h3>
                         <p>Elige tu sabor favorito.</p>
@@ -471,4 +471,5 @@
 </body>
 
 </html>
+
 
